# PUMA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_ies_post.py  run_puma.py
examples/: make_synthetic_ies.py  puma_demo.ipynb
pestpp_ies_post/: __init__.py  __main__.py  cli.py  marthe.py  plots.py  results.py  spatial.py  timeseries.py
puma/: __init__.py  __main__.py  cli.py  marthe.py  plots.py  report.py  results.py  spatial.py  timeseries.py  utils.py
