[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PUMA"
version = "0.1.0"
description = "(Post-processing for Uncertainty analysis and MARTHE cAlibration)- Autonomous post-processing and diagnostic plots for PEST++ IES (iterative ensemble smoother) runs, with optional Marthe/pymarthe spatial support."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Ranveer Kumar" }]
keywords = [
    "pest++", "pestpp", "ies", "iterative ensemble smoother",
    "pyemu", "marthe", "pymarthe", "groundwater", "calibration",
    "uncertainty", "post-processing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
    "pyemu>=1.1",
]

[project.optional-dependencies]
# Spatial maps over shapefiles / Marthe field rendering.
spatial = ["geopandas>=0.10"]
# pymarthe is installed from GitHub, not PyPI:
#   pip install git+https://github.com/pymartheproject/pymarthe.git
dev = ["pytest>=7", "flake8"]

[project.urls]
Homepage = "https://github.com/Ranveer82/PUMA"
Repository = "https://github.com/Ranveer82/PUMA"

[project.scripts]
puma = "puma.cli:main"

[tool.setuptools]
packages = ["puma"]

[tool.setuptools.package-data]
puma = ["py.typed"]
